objects/copado__Kanban_Board__c.object
<CustomObject>
    <fields>
        <fullName>copado__Columns_SOQL__c</fullName>
        <inlineHelpText>SOQL Query to retrieve the columns. Id and Name fields will be used to generate the list.</inlineHelpText>
        <label>Columns from SOQL</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Field_to_read_update__c</fullName>
        <inlineHelpText>Field to read/update for each Item. In &quot;object.field&quot; format</inlineHelpText>
        <label>Field to read/update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__JSON_Settings__c</fullName>
        <label>JSON Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__SOQL_Query__c</fullName>
        <inlineHelpText>SOQL Query to retrieve each Id, Title (second field in the query), and the &quot;Status&quot; field, as defined in Field to read/update. Every other field will be shown as the text content of the item.</inlineHelpText>
        <label>SOQL Query</label>
        <length>20480</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>